  their execution:

    - io.read/4
    - io.write_list/6
    - io.write_array/6
    - io.read_binary/4
    - io.write_binary/4

* We have added predicates to the lexer and parser modules that read from
  an explicitly specified input stream, not from the current input stream.

* We have added a module for discrete interval encoding trees, which are a
  highly efficient set implementation for fat sets. This module is a
  contribution from Yes Logic Pty. Ltd.

+ We have added two new modules for concurrent programming: thread.barrier
  and thread.future. The barrier module provides a barrier type which can
  be used to control progress in concurrent code. The future module
  provides future and future_io data types which can be used to compute
  values in parallel using other threads. These modules were contributed by
  Mission Critical IT.

* We have added a new module, ranges, that represents sets of integers using
  a sorted list of ranges. The new module exports operations that make it
  suitable for implementing domains in finite domain constraint solvers.

* We have added thread.spawn_native/4 to dedicate an OS thread to a Mercury
  thread. thread.spawn/4 was added as well.

* We have added the function from_reverse_list/1 to the version_array module.

* We have added thread.num_processors/3 which returns the number of
  processors available for parallel work.

* The following predicates and functions have been added to the thread.mvar
  module:

    - mvar.init/1
    - mvar.impure_init/1
    - mvar.try_read/4

+ We have deprecated the impure init/1 function in thread.semaphore.

* In C grades, the math module now provides the fused multiply-add operation
  on platforms that support it.

* Procedures in the store module no longer acquire the global lock.

* The following predicates and functions have been added to the char module:

    - is_ascii/1
    - is_decimal_digit/1
    - is_base_digit/2
    - int_to_binary_digit/2, det_int_to_binary_digit/1