@@ -150,9 +150,9 @@ live_region_analysis_proc(ModuleInfo, RptaInfoTable, LVBeforeTable,
             RptaInfo = rpta_info(Graph, _ALpha),
             module_info_proc_info(ModuleInfo, PPId, ProcInfo),
             find_input_output_args(ModuleInfo, ProcInfo, Inputs, Outputs),
-            lv_to_lr(set.from_list(Inputs), Graph, ModuleInfo, ProcInfo,
+            lv_to_lr(set.list_to_set(Inputs), Graph, ModuleInfo, ProcInfo,
                 InputR),
-            lv_to_lr(set.from_list(Outputs), Graph, ModuleInfo, ProcInfo,
+            lv_to_lr(set.list_to_set(Outputs), Graph, ModuleInfo, ProcInfo,
                 OutputR),
             map.set(PPId, InputR, !InputRTable),
             map.set(PPId, OutputR, !OutputRTable),
@@ -165,7 +165,7 @@ live_region_analysis_proc(ModuleInfo, RptaInfoTable, LVBeforeTable,
             % localR
             Nodes = rptg_get_nodes_as_list(Graph),
             set.difference(
-                set.difference(set.from_list(Nodes), InputR),
+                set.difference(set.list_to_set(Nodes), InputR),
                 OutputR, LocalR),
             map.set(PPId, LocalR, !LocalRTable),
 
