@@ -1313,8 +1313,8 @@ sharing_set_altclos_3_directed(ModuleInfo, ProcInfo,
                 NewSharingSet),
             ExtendedY = sharing_set_extend_datastruct(ModuleInfo, ProcInfo, Y,
                 NewSharingSet),
-            set_cross_product(set.from_list(ExtendedX),
-                set.from_list(ExtendedY), SetPairs),
+            set_cross_product(set.list_to_set(ExtendedX),
+                set.list_to_set(ExtendedY), SetPairs),
             new_entries(ModuleInfo, ProcInfo,
                 set.to_sorted_list(SetPairs), SS0, SS)
         ),
